@@ -418,4 +418,26 @@ in_vpriv:(NSInteger)in_vpriv
     }
     
 }
+// specific to VOT_CHOICE with optional values - seach dictionary for value, return index
+- (int) getChoiceIndexForValue:(NSString *)val {
+    DBGLog(@"gciv val=%@",val);
+    NSString *inVal = [NSString stringWithFormat:@"%f",[val floatValue]];
+    for (int i=0; i<CHOICES; i++) {
+        NSString *key = [NSString stringWithFormat:@"cv%d",i];
+        NSString *tstVal = [self.optDict valueForKey:key];
+        if (nil == tstVal) {
+            tstVal = [NSString stringWithFormat:@"%f",(float)i+1];  // added 7.iv.2013 - need default value
+        } else {
+            tstVal = [NSString stringWithFormat:@"%f",[tstVal floatValue]];  
+        }
+        //DBGLog(@"gciv test against %d: %@",i,tstVal);
+        if ([tstVal isEqualToString:inVal]) {
+            return i;
+        }
+    }
+    DBGLog(@"gciv: no match");
+    return CHOICES;
+    
+}
+
 @end
